<resources>
    <string name="Finished">Finished</string>
    <string name="app_name">FyreBirdScout</string>
    <string name="button_use">Start Scoring</string>
    <string name="button_up">+</string>
    <string name="button_down">-</string>
    <string name="highscore">Balls in Low Power Port</string>
    <string name="lowscore">Balls in Two Point Port</string>
    <string name="midscore">Balls in Three Point Port</string>
    <string name="LeaveLine">Did the Robot Leave From the Start Line?</string>
    <string name="Wheel">Robot Spun Wheel 3 Turns</string>
    <string name="wheelspot">Robot Spun Wheel to Color</string>
    <string name="Climb">Robot Succesfully Climbed</string>
    <string name="ClimbeMe">Robot Helped a Buddy Climb</string>
    <string name="Parked">Robot was Parked in End Zone</string>
    <string name="Ccle">Cycle</string>
    <string name="Shots">Shots Missed</string>
    <string name="take">Balls Intook</string>
    <string name="VerisonNumber">3.1</string>
    <string name="VersionStatus">alpha</string>
    <string name="by">Logout</string>
    <string name="Switch_name">dark mode</string>
    <string name="Switch_name1">light mode</string>
    <string name="action_settings">Settings</string>
    <string name="device_id">Device ID:</string>
    <string name="enter_the_blue_alliance_team_id">Enter The Blue Alliance Team ID</string>
    <string name="enter_the_id_for_this_device">Enter the id for this device</string>
    <string name="tba_team_id">TBA Team ID:</string>
    <string name="save">Save</string>
    <string name="leftCommunity"> Left Community </string>
    <string name="todo">TODO</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>

    <string name="hello_blank_fragment">Robot Broke Down</string>
    <string name="title_activity_settings">settings</string>
    <string name="hint_word">Edit Word</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">sorry :(</string>

    //Strings for tele op
    <string name="tele_op_title">Tele op</string>

    <string name="drove_checkbox">Drove</string>
    <string name="noshow_checkbox">No Show</string>
    <string name="broke_checkbox">Broke Down</string>
    <string name="onstation_checkbox">On Station</string>
    <string name="level_checkbox">Level On Station</string>

    <string name="top_row">Top</string>
    <string name="mid_row">Mid</string>
    <string name="low_row">Low</string>
    <string name="defense">Defense</string>
    <string name="cones">Cones</string>
    <string name="cubes">Cubes</string>
    <string name="teleop_next_button">Round Over</string>
    <string name="top_row_counter_cone">0</string>
    <string name="teamnum">Cubes</string>

</resources>

