<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:saveEnabled="false">

    <TextView
        android:id="@+id/textDeviceId"
        android:layout_width="74dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/device_id"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDeviceId"
        android:layout_width="182dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_the_id_for_this_device"
        android:importantForAutofill="no"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toEndOf="@+id/textDeviceId"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTbaTeamId"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_the_blue_alliance_team_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textTeamId"
        app:layout_constraintTop_toBottomOf="@+id/editDeviceId" />

    <TextView
        android:id="@+id/textTeamId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tba_team_id"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeviceId" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:onClick="saveConfig"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTeamLogo" />

    <TextView
        android:id="@+id/textTeamInfo"
        android:layout_width="337dp"
        android:layout_height="157dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTbaTeamId" />

    <ImageView
        android:id="@+id/imgTeamLogo"
        android:layout_width="140dp"
        android:layout_height="105dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTeamInfo"
        app:srcCompat="@drawable/ic_launcher_background" />
</androidx.constraintlayout.widget.ConstraintLayout>