<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="edu.phoenixforce.scouting.mobile.layouts.TeleScore">

    <!--<View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="550dp"
        android:background="?android:attr/listDivider" />-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="279dp"
        android:text="@string/lowscore"
        android:textColor="#FDFCFC"
        tools:visibility="visible" />

    <Button
        android:id="@+id/upbutton"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="281dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FDFCFC"
        android:text="@string/button_up" />

    <TextView
        android:id="@+id/integer_number"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="197dp"
        android:layout_marginRight="197dp"
        android:layout_marginBottom="281dp"
        android:background="@color/font"
        android:textSize="30sp" />

    <Button
        android:id="@+id/downbutton"
        android:layout_width="67dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="292dp"
        android:layout_marginRight="292dp"
        android:layout_marginBottom="281dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FDFCFC"
        android:text="@string/button_down" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="470dp"
        android:text="@string/midscore"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/downbutton2"
        android:layout_width="wrap_content"
        android:layout_height="43dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:layout_marginBottom="465dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_down"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/integer_number2"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="198dp"
        android:layout_marginRight="198dp"
        android:layout_marginBottom="465dp"
        android:background="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/upbutton2"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="465dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_up"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/downbutton3"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:layout_marginBottom="419dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_down"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="419dp"
        android:text="@string/highscore"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/integer_number3"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="198dp"
        android:layout_marginRight="198dp"
        android:layout_marginBottom="419dp"
        android:background="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/upbutton3"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="419dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FDFCFC"
        android:text="@string/button_up" />

    <Button
        android:id="@+id/downbutton4"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:layout_marginBottom="373dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FDFCFC"
        android:text="@string/button_down" />
   <TextView
        android:id="@+id/textView6"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="373dp"
        android:text="@string/Shots"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/integer_number4"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="198dp"
        android:layout_marginRight="198dp"
        android:layout_marginBottom="373dp"
        android:background="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/upbutton4"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="373dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FDFCFC"
        android:text="@string/button_up" />

    <Button
        android:id="@+id/downbutton5"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="293dp"
        android:layout_marginRight="293dp"
        android:layout_marginBottom="327dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FDFCFC"
        android:text="@string/button_down" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="327dp"
        android:text="@string/take"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/integer_number5"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="198dp"
        android:layout_marginRight="198dp"
        android:layout_marginBottom="327dp"
        android:background="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/upbutton5"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="327dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FDFCFC"
        android:text="@string/button_up" />


    //Checkboxes

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="108dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onCheckboxClicked"
        android:text="@string/ClimbeMe"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"


        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"

        android:layout_marginTop="0dp"
        android:layout_marginBottom="205dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/hello_blank_fragment"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"


        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"

        android:layout_marginBottom="174dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Wheel"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="141dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/wheelspot"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"

        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="75dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onCheckboxClicked"
        android:text="@string/Climb"
        android:textColor="#FFFFFF"
        android:visibility="visible" />

    <!--<EditText
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="10dp"
        android:-->

    <Button
        android:id="@+id/donebutton"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="19dp"
        android:background="@color/colorPrimaryDark"
        android:text="Finish"
        android:textColor="#FFFFFF" />


</RelativeLayout>